# code-ranker

./: .gitignore  .markdownlint-cli2.jsonc  CLA.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  NOTICE  README.md  TRADEMARK.md  code-ranker.toml  code-split.toml  pyproject.toml
contrib/: cla.md  prompt-eval-metrics.py  unit-tests.md  (+1 more)
crates/code-ranker-plugins/: Cargo.toml
crates/code-ranker-plugins/src/: config.rs  defaults.toml  lib.rs  test_support.rs
crates/code-ranker-plugins/src/config/: mod.rs  specs.rs  views.rs
crates/code-ranker-plugins/src/engine/: cognitive.rs  core.rs  halstead.rs  loc.rs  mod.rs  roles.rs  structural.rs
crates/code-ranker-plugins/src/engine/tests/: roles.rs
crates/code-ranker-plugins/src/languages/: README.md  mod.rs
crates/code-ranker-plugins/src/languages/c/: config.toml  mod.rs
crates/code-ranker-plugins/src/languages/cfamily/: mod.rs
crates/code-ranker-plugins/src/languages/cfamily/tests/: mod_rs.rs
crates/code-ranker-plugins/src/languages/cpp/: config.toml  mod.rs
crates/code-ranker-plugins/src/languages/csharp/: config.toml  mod.rs
crates/code-ranker-plugins/src/languages/ecmascript/: cfg.rs  config.toml  dialect.rs  imports.rs  mod.rs  structure.rs
crates/code-ranker-plugins/src/languages/ecmascript/tests/: dialect.rs  mod_rs.rs  structure.rs
crates/code-ranker-plugins/src/languages/go/: config.toml  mod.rs  structure.rs
crates/code-ranker-plugins/src/languages/javascript/: config.toml  mod.rs
crates/code-ranker-plugins/src/languages/javascript/tests/: mod_rs.rs
crates/code-ranker-plugins/src/languages/markdown/: config.toml  mod.rs  structure.rs
crates/code-ranker-plugins/src/languages/python/: config.toml  dialect.rs  imports.rs  mod.rs  structure.rs
crates/code-ranker-plugins/src/languages/rust/: analyze.rs  cfg.rs  collapse.rs  config.toml  dialect.rs  ids.rs  internal.rs  mod.rs  module_graph.rs  strip.rs  test_attr.rs  todo.md  toolchain.rs
crates/code-ranker-plugins/src/languages/typescript/: config.toml  mod.rs
crates/code-ranker-plugins/src/tests/: config.rs
crates/code-split-plugin-api/: Cargo.toml
crates/code-split-plugin-api/src/: lib.rs  log.rs
(+292 files in other folders)
