[package]
name = "code-ranker-plugins"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Code Ranker language plugins (Rust, Python, JavaScript, TypeScript) and the shared ECMAScript engine, merged into one crate with a per-language module layout."
# The e2e fixture projects ship under src/<lang>/tests/sample but are not part of the published crate.
exclude = ["src/rust/tests/sample", "src/python/tests/sample", "src/javascript/tests/sample", "src/typescript/tests/sample"]

[dependencies]
code-ranker-plugin-api = { workspace = true }
code-ranker-graph = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
cargo_metadata = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
which = { workspace = true }
# Node-kind tables + presets/thresholds/specs for each language are data
# (`<lang>.toml` inheriting `defaults.toml`); parsed via serde + toml.
serde = { workspace = true }
toml = { workspace = true }
# One version of each tree-sitter grammar across the workspace.
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# Path-only (no version): cargo strips it from the published manifest.
code-ranker-test-support = { path = "../code-ranker-test-support" }
